# entreclases.github.io

./: .gitignore  ARQUITECTURA.md  CHANGELOG.md  CLAUDE.md  INSTRUCCIONES.md  SEGURIDAD.md  capacitor.config.json  index.html  manifest.webmanifest  package-lock.json  package.json  supabase-setup.sql  sw.js
android/: .gitignore
android/app/: build.gradle
android/app/src/main/java/com/manugandini/cuadernoseguimiento/: MainActivity.java
android/app/src/main/res/values/: strings.xml
mantenimiento/: paso195_separacion_cuentas.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
web/: funciones.html  index.html  terminos.html
web/app/: aprobar.html  index.html  portal.html  styles.css  sw.js
web/app/js/: aprobar.js  auth.js  config.js  events.js  help-tutoriales.js  helpers.js  portal.js  sync.js  tour.js  views-admin.js  views-agenda.js  views-alumnos.js  views-core.js  views-cuenta.js  views-materias.js  views-stats.js  views-tablero.js  views.js
