[package]
name = "cuaderno-seguimiento"
version = "1.1.0"
description = "Cuaderno de seguimiento — seguimiento de estudiantes de clases particulares de matemática"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[[bin]]
name = "cuaderno-seguimiento"
path = "src/main.rs"
